--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -22,12 +22,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-
-
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.0.0
+
+      - name: Install Node.js dependencies
+        run: npm install
+        working-directory: ./app/nodejs-api/todo-api
 
       - name: Initialize Terraform
         run: terraform init -backend-config=backend.hcl
